fix clipped descenders for app names (bug 788875)

--- a/media/css/mkt/tile.less
+++ b/media/css/mkt/tile.less
@@ -124,7 +124,8 @@
         font-size: 20px;
         font-weight: 400;
         line-height: 22px;
-        margin: -4px 0 2px;
+        margin: -4px 0 -7px;
+        padding-bottom: 9px;
     }
     .icon {
         float: left;
